--- a/submissions/thesis-original/introduction/introduction.tex
+++ b/submissions/thesis-original/introduction/introduction.tex
@@ -4,7 +4,7 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-\Gls{vc} is financial capital provided to early-stage, high-potential, high-growth companies (startups). \Gls{vc} firms have funded many successful companies, such as Google, Apple, Microsoft and Alibaba. Unlike investors in the public markets, \gls{vc} firms often take a more active role in managing their investments, providing expertise and advice in both managerial and technical areas. \Gls{vc} firms have two primary roles: as scouts, able to identify the potential of new startups, and as coaches, able to help startups realise that potential \cite{baum2004}. In these ways, \gls{vc} is often critical to the success of startups, and therfore the commercialisation of new technologies more generally. Adoption of the Internet and inexpensive, ubiquitous computing has transformed the \gls{vc} industry: companies require less funding to launch but more to scale in highly competitive markets \cite{graham2013}. There is now an impetus for \gls{vc} firms to change the way they operate.
+\Gls{vc} is financial capital provided to early-stage, high-potential, high-growth companies (startups). \Gls{vc} firms have funded many successful companies, such as Google, Apple, Microsoft and Alibaba. Unlike investors in the public markets, \gls{vc} firms often take a more active role in managing their investments, providing expertise and advice in both managerial and technical areas. \Gls{vc} firms have two primary roles: as scouts, identifying the potential of new startups, and as coaches, helping startups realise that potential \cite{baum2004}. In these ways, \gls{vc} is often critical to the success of startups, and therfore the commercialisation of new technologies more generally. Adoption of the Internet and inexpensive, ubiquitous computing has transformed the \gls{vc} industry: companies require less funding to launch but more to scale in highly competitive markets \cite{graham2013}. There is now an impetus for \gls{vc} firms to change the way they operate.
 
 \Gls{vc} firms face the challenge of choosing a few outstanding investments from a sea of hundreds of thousands of potential opportunities. \Gls{vc} firms seek to make investments in companies that can provide a liquidity event that returns many times their investment value within the time frame of their fund. For startups, a liquidity event (also referred to as an `exit') is either an \gls{ipo} or an acquisition by a larger competitor. Most \gls{vc} firms expect their investments to exit within 3-6 years, in accordance with their fund time-frame \cite{gompers1995}. When compared to public market investors, this is a long-term investment strategy. However, few companies are capable of maturing from early-stage to exit at this pace. In addition, traditional metrics of performance (e.g. cash-flow, earnings) often do not exist or are unclear \cite{shane2002}. In summary, \gls{vc} firms must select from a field of many investment candidates, where little information is available on each of them, and only a few will grow at a fast enough rate to be worthwhile  -- this is why the \gls{vc} investment screening process is considered difficult.
 
